# yet-another-VSCode-CMake-raylib-template.

./: .gitignore  CMakeLists.txt  ReadMe.md  main.c
